<resources>
    <string name="app_name" translatable="false">PStore</string>
    <string name="price" translatable="false">%1$s VND</string>
    <string name="birthday" translatable="false">%1$d - %2$d - %3$d</string>
    <string name="image1" translatable="false">https://salt.tikicdn.com/cache/w1080/ts/banner/35/84/47/b5968aabcf76d21b74c9afe34664d6c1.png.webp</string>
    <string name="image2" translatable="false">https://salt.tikicdn.com/cache/w1080/ts/banner/e5/06/65/978bf71239687f0c2ceaa2ff66f29586.png.webp</string>
    <string name="image3" translatable="false">https://salt.tikicdn.com/cache/w1080/ts/banner/79/ee/90/96195bbb954378d0d26f0a732a3c66a8.png.webp</string>
    <string name="login">Login</string>
    <string name="confirm_cart">Confirm Cart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot ?</string>
    <string name="register">Register</string>
    <string name="checkout">Checkout</string>
    <string name="recommend">Maybe you also like this</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday_text">Birthday</string>
    <string name="add_cart_success">Add to cart Successful!</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="missing_info">Please fill all the information</string>
    <string name="missing_email">Email cannot be empty</string>
    <string name="missing_password">Password cannot be empty</string>
    <string name="password_not_match">Password not matched</string>
    <string name="missing_firstname">Firstname cannot be empty</string>
    <string name="missing_lastname">Lastname cannot be empty</string>
    <string name="missing_phone">Phone number cannot be empty</string>
    <string name="register_success">Register Successful!</string>
    <string name="login_success">Login successful!</string>
    <string name="order_success">Place order Successful</string>
    <string name="order_date">Your order will be packed and shipped within a week. Thank you for choosing us!</string>
    <string name="logout">Logout</string>
</resources>